# MCpp

./: .editorconfig  .gitignore  BUILDING.md  CMakeLists.txt  Dependencies.cmake  README.md
Scripts/: Setup-Linux.sh  Setup-Windows.bat  Setup-macOS.sh
src/: CMakeLists.cmake  CMakeLists.txt
src/Client/: Client.cpp  Client.h  Colors.cpp  Colors.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ResourceManager.cpp  ResourceManager.h  VulkanHandler.cpp  VulkanHandler.h  main.cpp  stbImplementation.c
src/Common-Lib/: Logging.cpp  Logging.h  Utils.h
src/Common-Lib/Utils/: Identifier.cpp  Identifier.h
src/Server/: DedicatedServer.cpp  DedicatedServer.h  main.cpp
